fix: tipo del id de Usuario, nombre de la base de datos en la uri

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 SPRING_DATASOURCE_USERNAME=user
 SPRING_DATASOURCE_PASSWORD=userpassword
 SPRING_DATASOURCE_DB=login_test
-SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/segobadb
+SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/login_test
